Contact-us message text-area

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -21,7 +21,7 @@
               <label>Your Message</label>
               <div class="input-group">
                 <span class="input-group-addon"></span>
-                <input type="text" class="form-control" id="message" placeholder="Enter your message" [(ngModel)]="message" name="message">
+                <input type="text-area" class="form-control" id="message" placeholder="Enter your message" [(ngModel)]="message" name="message">
               </div>
             </div>
 
