--- a/src/app/profile/components/user-details/user-details.component.html
+++ b/src/app/profile/components/user-details/user-details.component.html
@@ -16,6 +16,7 @@
           <li class="list-group-item"><h5>Email:</h5>{{userProfile.email}}</li>
           <li class="list-group-item"><h5>Phone No:</h5><a href="">add</a></li>
         </ul>
+        <a class="btn btn-info">Update Profile</a>
       </div>
     </div>
   </div>
