--- a/src/app/profile/components/user-menu/user-menu.component.html
+++ b/src/app/profile/components/user-menu/user-menu.component.html
@@ -1,6 +1,7 @@
 <div class="card">
   <button class="btn btn-info">  <i class="fa fa-pencil" aria-hidden="true"></i> Edit Profile</button>
   <button class="btn btn-info" [routerLink]="['/listings']">Go to listings</button>
+   <button class="btn btn-info" [routerLink]="['/post-listing']">post a listing</button>
 
   <ul class="list-group">
     <li class="list-group-item">Questions?</li>
