--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -14,11 +14,13 @@
         
       </div>
       <div class="col-md-4">
-        <img class="img-fluid" src="http://placehold.it/400x150/007089/FFF" alt="">
+        <div class="text-xs-center">
+        <img class="img-fluid" src="http://placehold.it/400x150/003835/FFF" alt="">
         <h4>Plisting Social Media</h4>
         <a class="text-info" href="">Twitter</a>
         <a class="text-primary" href="">Facebook</a>
         <a class="text-warning" href="">Instagram</a>
+        </div>
       </div>
       <div class="col-md-2">
         <h4>General Inquiries</h4>
