--- a/src/app/listings/components/listing-grid/listing-grid.component.html
+++ b/src/app/listings/components/listing-grid/listing-grid.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings">
+<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | paginate: { itemsPerPage: 6, currentPage: p }">
   <div class="card">
     <img [src]="listing.image1" class="card-img-top">
     <div class="card-block">
@@ -16,4 +16,9 @@
     </div>
 
   </div>
+</div>
+<div class="row">
+<div class="text-xs-center">
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
 </div>
