--- a/src/app/listings/components/listing-grid/listing-grid.component.html
+++ b/src/app/listings/components/listing-grid/listing-grid.component.html
@@ -1,24 +1,29 @@
+<div class="row">
 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | paginate: { itemsPerPage: 6, currentPage: p }">
   <div class="card">
     <img [src]="listing.image1" class="card-img-top">
-    <div class="card-block">
+    <div class="card-block bg-faded">
       <h4 class="card-title">{{ listing.name }}</h4>
-      <p class="text-small">{{ listing.description }}</p>
-      <p class="float-xs-left text-warning">{{ listing.status }}</p>
-      <p class="float-xs-right text-success">{{ listing.type }}</p>
-    </div>
-    <div class="card-block bg-inverse text-white small-font">
-      <p class="float-xs-left">Ksh. {{ listing.price }}</p>
-      <p class="float-xs-right">
+      <p class="card-text">{{ listing.description }}</p>
+      <div class="row">
+        <div class="col-md-6">
+          <p class="text-warning card-text">{{ listing.status | uppercase }}</p>
+        </div>
+        <div class="col-md-6">
+          <p class="text-success card-text">{{ listing.type | uppercase }}</p>
+        </div>
+      </div>
+      <p class="card-text">Ksh. {{ listing.price }} </p> <hr>
+      <p>
         <a href="" class="btn btn-success">Save Listing</a>
         <a href="" class="btn btn-primary">More Details</a>
       </p>
     </div>
-
   </div>
 </div>
-<div class="row">
-<div class="text-xs-center">
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
 </div>
+<div class="row">
+  <div class="text-xs-center">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
 </div>
