--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -19,10 +19,12 @@
       <h1 class="section-title">Modern Plisting Features</h1>
       <div class="col-xs-12 col-sm-9 blarb card">
         <div class="col-lg-12">
-          <h2 class="text-xs-center">Modern Plisting Features</h2>
+          <hr>
+          <h2 class="text-xs-center text-primary">Modern Plisting Features</h2>
+          <hr>
         </div>
         <div class="col-md-6">
-          <p>The Modern Business template includes:</p>
+          <h4 class=""> The Modern Housing plan includes:</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit,
             quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
         </div>
@@ -30,13 +32,15 @@
           <img class="img-fluid" src="http://placehold.it/700x450/007089/FFF" alt="">
         </div>
         <div class="col-lg-12">
-          <h2 class="text-xs-center">Modern Plisting Features</h2>
+          <hr>
+          <h2 class="text-xs-center text-primary">Modern Plisting Features</h2>
+          <hr>
         </div>
         <div class="col-md-6">
           <img class="img-fluid" src="http://placehold.it/700x450/007089/FFF" alt="">
         </div>
         <div class="col-md-6">
-          <p>The Modern Business template includes:</p>
+           <h4 class=""> The Modern Business template includes:</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit,
             quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
         </div>
