homepage edit, proof-reading and touch up

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <app-navbar></app-navbar>
   <div class="container">
     <section class="jumbotron text-xs-center bg-inverse">
-      <h1 class="jumbotron-heading">Welcome To PlisMan Listings And Management</h1>
+      <h1 class="jumbotron-heading">PlisMan Property Listings</h1>
       <p class="lead text-muted">
-        The No1. Place To Find or Post Houses, Apartments, Flats, Offices, Hostels and Other Properties For Sale or For Rent.
+        The No1. Place To Find or Post your property, Offices, Hostels for Sale or For Rent.
       </p>
       <p>
         <a class="btn btn-primary" [routerLink]="['/listings']">Find Properties</a>
@@ -40,7 +40,7 @@
           <img class="img-fluid" src="http://placehold.it/700x450/007089/FFF" alt="">
         </div>
         <div class="col-md-6">
-           <h4 class=""> The Modern Business template includes:</h4>
+          <h4 class=""> The Modern Business template includes:</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit,
             quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
         </div>
@@ -65,11 +65,12 @@
     <div class="jumbotron bg-inverse">
       <div class="row">
         <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae
-            veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+          <blockquote class="blockquote">
+            <p class="mb-0">Join the movement and make your listings online for the world to see.</p>
+          </blockquote>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
+          <a class="btn btn-outline-success btn-lg " href="#">Make a listing now!</a>
         </div>
       </div>
     </div>
