--- a/src/app/home-page/components/featured-listings/featured-listings.component.html
+++ b/src/app/home-page/components/featured-listings/featured-listings.component.html
@@ -1,8 +1,8 @@
 <div class="card-deck-wrapper">
 <div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="assets/dummy_listings/listing5.jpg" alt="" />
-    <div class="card-block">
+  <div class="card card-outline-primary" >
+    <img class="card-img-top" src="http://placehold.it/700x450/0275d8/FFF" alt="" />
+    <div class=" card-block bg-faded">
       <h4 class="card-title">
         Product title</h4>
       <div class="row">
@@ -16,9 +16,9 @@
     </div>
   </div>
 
-  <div class="card">
-    <img class="card-img-top" src="assets/dummy_listings/listing3.jpg" alt="" />
-    <div class="card-block">
+  <div class="card card-outline-primary">
+    <img class="card-img-top" src="http://placehold.it/700x450/5bc0de/FFF" alt="" />
+    <div class=" card-block bg-faded">
       <h4 class="card-title">
         Product title</h4>
       <div class="row">
@@ -33,9 +33,9 @@
   </div>
 
 
-  <div class="card">
-    <img class="card-img-top" src="assets/dummy_listings/listing1.jpg" alt="" />
-    <div class="card-block">
+  <div class="card card-outline-primary">
+    <img class="card-img-top" src="http://placehold.it/700x450/0275d8/FFF" alt="" />
+    <div class=" card-block bg-faded">
       <h4 class="card-title">Product title</h4>
       <div class="row">
         <div class="col-xs-12">
