--- a/src/app/listings/containers/listings/listings.component.html
+++ b/src/app/listings/containers/listings/listings.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <h1 class="display-4">Properties Page <small class="text-muted">Find houses, hostels, offices and among other properties here...</small></h1>
+  <h1 class="display-4">Properties Page <small class="text-muted">Find houses, hostels and spacious offices.</small></h1>
   <div class="card">
     <div class="card-header bg-inverse text-white">
       <app-listings-navigation 
