--- a/src/app/listings/components/listing-grid/listing-grid.component.html
+++ b/src/app/listings/components/listing-grid/listing-grid.component.html
@@ -1,4 +1,7 @@
-<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings">
+<h3 *ngIf="searchTerm">Search For {{searchTerm}}</h3>
+
+<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | search: searchTerm">
+  
   <div class="card">
     <img [src]="listing.image1" class="card-img-top">
     <div class="card-block">
@@ -11,7 +14,7 @@
       <p class="float-xs-left">Ksh. {{ listing.price }}</p>
       <p class="float-xs-right">
         <a href="" class="btn btn-success">Save Listing</a>
-        <a href="" class="btn btn-primary">More Details</a>
+        <a href="" [routerLink]="['/listing', listing.$key]" class="btn btn-primary">More Details</a>
       </p>
     </div>
 
