--- a/src/app/listings/components/listing-grid/listing-grid.component.html
+++ b/src/app/listings/components/listing-grid/listing-grid.component.html
@@ -1,6 +1,7 @@
 
 <div class="row">
-  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | paginate: { itemsPerPage: 6, currentPage: p }">
+  <h3 *ngIf="searchTerm">Search For {{searchTerm}}</h3>
+  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | paginate: { itemsPerPage: 6, currentPage: p } | search: searchTerm">
     <div class="card">
       <img [src]="listing.image1" class="card-img-top">
       <div class="card-block">
@@ -15,10 +16,11 @@
           </div>
         </div>
         <p class="card-text">Ksh. {{ listing.price }} </p>
+        <p class="card-text">Ksh. {{ listing.date | date }} </p>
       </div>
       <div class="card-footer">
         <a href="" class="btn btn-success">Save Listing</a>
-        <a href="" class="btn btn-primary">More Details</a>
+        <a href="" class="btn btn-primary" [routerLink]="['/listing', listing.$key]">More Details</a>
       </div>
     </div>
   </div>
@@ -30,26 +32,8 @@
       <div class="text-xs-center">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
-
-<h3 *ngIf="searchTerm">Search For {{searchTerm}}</h3>
-
-<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let listing of listings | search: searchTerm">
-  
-  <div class="card">
-    <img [src]="listing.image1" class="card-img-top">
-    <div class="card-block">
-      <h4 class="card-title">{{ listing.name }}</h4>
-      <p class="text-small">{{ listing.description }}</p>
-      <p class="float-xs-left text-warning">{{ listing.status }}</p>
-      <p class="float-xs-right text-success">{{ listing.type }}</p>
     </div>
-    <div class="card-block bg-inverse text-white small-font">
-      <p class="float-xs-left">Ksh. {{ listing.price }}</p>
-      <p class="float-xs-right">
-        <a href="" class="btn btn-success">Save Listing</a>
-        <a href="" [routerLink]="['/listing', listing.$key]" class="btn btn-primary">More Details</a>
-      </p>
+  </div> 
+</div> 
 
-    </div>
-  </div>
-</div>
+
