--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse">`
+<nav class="navbar navbar-dark bg-inverse">
   <div class="container">
     <button 
     class="navbar-toggler hidden-lg-up" 
